changing src files location

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - gumrindelwald</title>
-    <link rel="icon" href="../src/img/icon.ico">
+    <link rel="icon" href="src/img/icon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link
@@ -20,7 +20,7 @@
             <button class="absolute text-2xl -top-4 right-8" id="close-full-menu-button"><i class="fas fa-times"></i></button>
             <div class="menus-wrapper h-full flex justify-center items-center my-auto">
                 <div class="menus">
-                    <img src="../src/img/logo.svg" class="w-1/2 mx-auto mb-4" alt="gumrindelwald logo">
+                    <img src="src/img/logo.svg" class="w-1/2 mx-auto mb-4" alt="gumrindelwald logo">
                     <ul class="flex flex-col flex-1 justify-center items-center gap-4 text-gray-800">
                         <li class="cursor-pointer text-center font-semibold text-xl"><a href="index.html">Home</a></li>
                         <li class="cursor-pointer text-center font-semibold text-xl"><a href="dashboard.html">Blogs</a></li>
@@ -33,7 +33,7 @@
     <!---------HEADER--------->
     <header class="sticky top-0 h-auto z-10 w-full bg-white">
         <nav class="container w-full flex items-center md:px-8 p-4 mx-auto">
-            <div class="logo py-1"><img src="../src/img/logo.svg" class="sm:h-7 h-5" alt="gumrindelwald logo"></div>
+            <div class="logo py-1"><img src="src/img/logo.svg" class="sm:h-7 h-5" alt="gumrindelwald logo"></div>
             <ul class="hidden sm:flex flex-1 justify-end items-end text-lg gap-6">
                 <li class="cursor-pointer"><a href="index.html">Home</a></li>
                 <li class="cursor-pointer"><a href="dashboard.html">Blogs</a></li>
@@ -57,7 +57,7 @@
                 <div class="dashboard container items-center justify-center w-full">
                     <!-- ARTICLE CARD -->
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
-                        <img src="../src/img/examples/1.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <img src="src/img/examples/1.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
                         <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
@@ -74,7 +74,7 @@
                     </div>
 
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
-                        <img src="../src/img/examples/6.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <img src="src/img/examples/6.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
                         <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
-                        <img src="../src/img/examples/4.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <img src="src/img/examples/4.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
                         <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
-                        <img src="../src/img/examples/5.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <img src="src/img/examples/5.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
                         <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
@@ -175,7 +175,7 @@
 
     <!---------FOOTER--------->
     <footer class="bg-black text-white mt-4 p-8 w-full">
-        <img src="../src/img/logo-white.svg" alt="gumrindelwald icon" class="h-8 mx-auto mb-4">
+        <img src="src/img/logo-white.svg" alt="gumrindelwald icon" class="h-8 mx-auto mb-4">
         <p class="text-center">Copyright &copy; 2021. Created and developed by <a href="#" class="underline">Ara Gamaliel Boanerges</a>. All rights reserved.</p>
         <div class="social-media-footer mt-2 text-center text-white">
             <a href="https://www.instagram.com/gamalielboanerges/" target="_blank" class="mx-2"><i class="fab fa-instagram text-lg"></i></a>
