--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ara Gamaliel - gumrindelwald</title>
-    <link rel="icon" href="../src/img/icon.ico">
+    <link rel="icon" href="src/img/icon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link
@@ -20,7 +20,7 @@
             <button class="absolute text-2xl -top-4 right-8" id="close-full-menu-button"><i class="fas fa-times"></i></button>
             <div class="menus-wrapper h-full flex justify-center items-center my-auto">
                 <div class="menus">
-                    <img src="../src/img/logo.svg" class="w-1/2 mx-auto mb-4" alt="gumrindelwald logo">
+                    <img src="src/img/logo.svg" class="w-1/2 mx-auto mb-4" alt="gumrindelwald logo">
                     <ul class="flex flex-col flex-1 justify-center items-center gap-4 text-gray-800">
                         <li class="cursor-pointer text-center font-semibold text-xl"><a href="index.html">Home</a></li>
                         <li class="cursor-pointer text-center font-semibold text-xl"><a href="dashboard.html">Blogs</a></li>
@@ -34,7 +34,7 @@
     <!---------HEADER--------->
     <header class="sticky top-0 h-auto z-10 w-full bg-white">
         <nav class="container w-full flex items-center md:px-8 p-4 mx-auto">
-            <div class="logo py-1"><img src="../src/img/logo.svg" class="sm:h-7 h-5" alt="gumrindelwald logo"></div>
+            <div class="logo py-1"><img src="src/img/logo.svg" class="sm:h-7 h-5" alt="gumrindelwald logo"></div>
             <ul class="hidden sm:flex flex-1 justify-end items-end text-lg gap-6">
                 <li class="cursor-pointer"><a href="index.html">Home</a></li>
                 <li class="cursor-pointer"><a href="dashboard.html">Blogs</a></li>
@@ -49,7 +49,7 @@
         <h1 class="md:text-6xl sm:text-4xl text-2xl font-semibold text-center my-4">Ara Gamaliel Boanerges</h1>
         <div class="container md:flex justify-center items-center h-full mt-4 mx-auto">
             <div class="my-image mx-auto lg:w-1/6 md:w-1/4 w-1/2 md:mb-0 mb-4 md:mx-0 h-full">
-                <img src="../src/img/me.png" alt="Ara Gamaliel Boanerges Simarmata" class="w-full h-1/4 my-auto mr-4 object-cover">
+                <img src="src/img/me.png" alt="Ara Gamaliel Boanerges Simarmata" class="w-full h-1/4 my-auto mr-4 object-cover">
             </div>
             <div class="about-me-text lg:w-3/6 md:w-3/4 w-full flex items-center">
                 <div class="about-me-body">
@@ -87,7 +87,7 @@
 
     <!---------FOOTER--------->
     <footer class="bg-black text-white mt-4 p-8 w-full">
-        <img src="../src/img/logo-white.svg" alt="gumrindelwald icon" class="h-8 mx-auto mb-4">
+        <img src="src/img/logo-white.svg" alt="gumrindelwald icon" class="h-8 mx-auto mb-4">
         <p class="text-center">Copyright &copy; 2021. Created and developed by <a href="#" class="underline">Ara Gamaliel Boanerges</a>. All rights reserved.</p>
         <div class="social-media-footer mt-2 text-center text-white">
             <a href="https://www.instagram.com/gamalielboanerges/" target="_blank" class="mx-2"><i class="fab fa-instagram text-lg"></i></a>
