edit the search input

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -49,8 +49,8 @@
         <div class="content sm:flex">
             <main class="md:w-4/5 sm:w-2/3 px-4 mt-6 mx-auto">
                 <div class="search-post">
-                    <form action="" class="search-blog">
-                        <input type="text" class="bg-gray-200 p-2 rounded my-2 w-1/2" placeholder="Search Blogs" required>
+                    <form action="" class="search-blog w-full mx-auto">
+                        <input type="text" class="bg-gray-200 p-2 rounded my-2 w-5/6" placeholder="Search Blogs" required>
                         <button type="submit" class="search-blog-button p-2 rounded bg-gray-200" name="search-blog"><i class="fas fa-search"></i></button>
                     </form>
                 </div>
@@ -58,7 +58,7 @@
                     <!-- ARTICLE CARD -->
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
                         <img src="src/img/examples/1.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
-                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
+                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
@@ -75,7 +75,7 @@
 
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
                         <img src="src/img/examples/6.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
-                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
+                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
@@ -92,7 +92,7 @@
 
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
                         <img src="src/img/examples/4.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
-                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
+                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
@@ -109,7 +109,7 @@
 
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
                         <img src="src/img/examples/5.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
-                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-400 hover:text-white transition duration-200 ease">
+                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
