--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -49,8 +49,8 @@
         <div class="content sm:flex">
             <main class="md:w-4/5 sm:w-2/3 px-4 mt-6 mx-auto">
                 <div class="search-post">
-                    <form action="" class="search-blog w-full mx-auto">
-                        <input type="text" class="bg-gray-200 p-2 rounded my-2 w-5/6" placeholder="Search Blogs" required>
+                    <form action="" class="search-blog">
+                        <input type="text" class="bg-gray-200 p-2 rounded my-2 md:w-1/2 w-5/6" placeholder="Search Blogs" required>
                         <button type="submit" class="search-blog-button p-2 rounded bg-gray-200" name="search-blog"><i class="fas fa-search"></i></button>
                     </form>
                 </div>
@@ -62,63 +62,80 @@
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
-                                <div class="category-article rounded bg-gray-600 max-w-max px-1"><h6 class="article-date text-xs mb-2 text-white font-semibold">Science</h6></div>
-                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, tempora autem laboriosam sapiente voluptatem laudantium blanditiis nostrum debitis sit deserunt in unde accusamus delectus non atque beatae dolorem quasi, quod praesentium repellat quis porro libero nobis quam? Culpa, a. Voluptas aperiam quod illo quae laudantium quibusdam corrupti perspiciatis, quidem placeat.</p>
-                                <div class="article-stat">
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold"><i class="far fa-eye"></i> 300</span>
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold mx-2"><i class="fas fa-comment"></i> 10</span>
-                                </div>
+                                <h6 class="article-date text-xs mb-2 font-semibold"><i class="fas fa-tags mr-2"></i>Science</h6>
+                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloribus id vero ad repudiandae exercitationem hic modi aliquam quae magnam temporibus delectus dolores nesciunt non culpa, nulla asperiores, perferendis, error inventore cumque excepturi. Nostrum quo placeat sint magnam, quibusdam harum error qui veritatis corporis doloribus maxime iste obcaecati non alias?</p>
                             </div>
                             <a href="blog-page.html" class="mt-2 hover:underline">Read More<i class="fas fa-arrow-right ml-1"></i></a>
                         </div>
                     </div>
-
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
-                        <img src="src/img/examples/6.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <img src="src/img/examples/2.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
                         <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
-                                <div class="category-article rounded bg-gray-600 max-w-max px-1"><h6 class="article-date text-xs mb-2 text-white font-semibold">Personal Thoughts</h6></div>
-                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, tempora autem laboriosam sapiente voluptatem laudantium blanditiis nostrum debitis sit deserunt in unde accusamus delectus non atque beatae dolorem quasi, quod praesentium repellat quis porro libero nobis quam? Culpa, a. Voluptas aperiam quod illo quae laudantium quibusdam corrupti perspiciatis, quidem placeat.</p>
-                                <div class="article-stat">
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold"><i class="far fa-eye"></i> 300</span>
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold mx-2"><i class="fas fa-comment"></i> 10</span>
-                                </div>
+                                <h6 class="article-date text-xs mb-2 font-semibold"><i class="fas fa-tags mr-2"></i>Films</h6>
+                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloribus id vero ad repudiandae exercitationem hic modi aliquam quae magnam temporibus delectus dolores nesciunt non culpa, nulla asperiores, perferendis, error inventore cumque excepturi. Nostrum quo placeat sint magnam, quibusdam harum error qui veritatis corporis doloribus maxime iste obcaecati non alias?</p>
                             </div>
                             <a href="blog-page.html" class="mt-2 hover:underline">Read More<i class="fas fa-arrow-right ml-1"></i></a>
                         </div>
                     </div>
-
+                    <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
+                        <img src="src/img/examples/3.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
+                            <div class="article-content h-5/6 overflow-hidden">
+                                <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
+                                <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
+                                <h6 class="article-date text-xs mb-2 font-semibold"><i class="fas fa-tags mr-2"></i>Books</h6>
+                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloribus id vero ad repudiandae exercitationem hic modi aliquam quae magnam temporibus delectus dolores nesciunt non culpa, nulla asperiores, perferendis, error inventore cumque excepturi. Nostrum quo placeat sint magnam, quibusdam harum error qui veritatis corporis doloribus maxime iste obcaecati non alias?</p>
+                            </div>
+                            <a href="blog-page.html" class="mt-2 hover:underline">Read More<i class="fas fa-arrow-right ml-1"></i></a>
+                        </div>
+                    </div>
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
                         <img src="src/img/examples/4.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
                         <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
-                                <div class="category-article rounded bg-gray-600 max-w-max px-1"><h6 class="article-date text-xs mb-2 text-white font-semibold">Psychology</h6></div>
-                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, tempora autem laboriosam sapiente voluptatem laudantium blanditiis nostrum debitis sit deserunt in unde accusamus delectus non atque beatae dolorem quasi, quod praesentium repellat quis porro libero nobis quam? Culpa, a. Voluptas aperiam quod illo quae laudantium quibusdam corrupti perspiciatis, quidem placeat.</p>
-                                <div class="article-stat">
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold"><i class="far fa-eye"></i> 300</span>
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold mx-2"><i class="fas fa-comment"></i> 10</span>
-                                </div>
+                                <h6 class="article-date text-xs mb-2 font-semibold"><i class="fas fa-tags mr-2"></i>Personal Thoughts</h6>
+                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloribus id vero ad repudiandae exercitationem hic modi aliquam quae magnam temporibus delectus dolores nesciunt non culpa, nulla asperiores, perferendis, error inventore cumque excepturi. Nostrum quo placeat sint magnam, quibusdam harum error qui veritatis corporis doloribus maxime iste obcaecati non alias?</p>
                             </div>
                             <a href="blog-page.html" class="mt-2 hover:underline">Read More<i class="fas fa-arrow-right ml-1"></i></a>
                         </div>
                     </div>
-
                     <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
                         <img src="src/img/examples/5.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
                         <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
                             <div class="article-content h-5/6 overflow-hidden">
                                 <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
                                 <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
-                                <div class="category-article rounded bg-gray-600 max-w-max px-1"><h6 class="article-date text-xs mb-2 text-white font-semibold">Films</h6></div>
-                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, tempora autem laboriosam sapiente voluptatem laudantium blanditiis nostrum debitis sit deserunt in unde accusamus delectus non atque beatae dolorem quasi, quod praesentium repellat quis porro libero nobis quam? Culpa, a. Voluptas aperiam quod illo quae laudantium quibusdam corrupti perspiciatis, quidem placeat.</p>
-                                <div class="article-stat">
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold"><i class="far fa-eye"></i> 300</span>
-                                    <span class="phone:text-sm text-xs mt-1 font-semibold mx-2"><i class="fas fa-comment"></i> 10</span>
-                                </div>
+                                <h6 class="article-date text-xs mb-2 font-semibold"><i class="fas fa-tags mr-2"></i>Psychology</h6>
+                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloribus id vero ad repudiandae exercitationem hic modi aliquam quae magnam temporibus delectus dolores nesciunt non culpa, nulla asperiores, perferendis, error inventore cumque excepturi. Nostrum quo placeat sint magnam, quibusdam harum error qui veritatis corporis doloribus maxime iste obcaecati non alias?</p>
+                            </div>
+                            <a href="blog-page.html" class="mt-2 hover:underline">Read More<i class="fas fa-arrow-right ml-1"></i></a>
+                        </div>
+                    </div>
+                    <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
+                        <img src="src/img/examples/6.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
+                            <div class="article-content h-5/6 overflow-hidden">
+                                <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
+                                <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
+                                <h6 class="article-date text-xs mb-2 font-semibold"><i class="fas fa-tags mr-2"></i>Films</h6>
+                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloribus id vero ad repudiandae exercitationem hic modi aliquam quae magnam temporibus delectus dolores nesciunt non culpa, nulla asperiores, perferendis, error inventore cumque excepturi. Nostrum quo placeat sint magnam, quibusdam harum error qui veritatis corporis doloribus maxime iste obcaecati non alias?</p>
+                            </div>
+                            <a href="blog-page.html" class="mt-2 hover:underline">Read More<i class="fas fa-arrow-right ml-1"></i></a>
+                        </div>
+                    </div>
+                    <div class="article-view text-black flex md:flex-row flex-col my-4 w-full">
+                        <img src="src/img/examples/4.jpg" class="lg:w-1/4 md:w-1/3 w-full h-full object-cover" alt="">
+                        <div class="article-wrapper lg:w-3/4 md:w-2/3 h-full p-2 hover:bg-gray-700 hover:text-white transition duration-200 ease">
+                            <div class="article-content h-5/6 overflow-hidden">
+                                <h5 class="article-title phone:text-xl text-lg font-bold">Enjoy the view of the crows</h5>
+                                <h6 class="article-date text-sm font-semibold">Wed, Sep 22 2021</h6>
+                                <h6 class="article-date text-xs mb-2 font-semibold"><i class="fas fa-tags mr-2"></i>Personal Thoughts</h6>
+                                <p class="article-preview-text sm:text-sm text-xs text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo doloribus id vero ad repudiandae exercitationem hic modi aliquam quae magnam temporibus delectus dolores nesciunt non culpa, nulla asperiores, perferendis, error inventore cumque excepturi. Nostrum quo placeat sint magnam, quibusdam harum error qui veritatis corporis doloribus maxime iste obcaecati non alias?</p>
                             </div>
                             <a href="blog-page.html" class="mt-2 hover:underline">Read More<i class="fas fa-arrow-right ml-1"></i></a>
                         </div>
